tests/errors/bitwise_type.ki
discard bitand(1.5, 2)
